Fix various responsive issues
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -109,7 +109,7 @@
                     <a href="{{.Site.Params.domain_appscode}}/about/" target="_blank" class="link">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a href="/webinar" target="_blank" class="link">Webinar <span class="whats-new">New</span></a>
+                    <a href="https://appscode.com/webinar" target="_blank" class="link">Webinar <span class="whats-new">New</span></a>
                   </li>
                   <li class="nav-item">
                     <a href="{{.Site.Params.domain_appscode}}/contact/" target="_blank" class="link">Contact</a>
