--- a/static/assets/sass/components/_navbar.scss
+++ b/static/assets/sass/components/_navbar.scss
@@ -875,46 +875,9 @@
 Responsive Classes
 *****************************************/
 @media (max-width: 1023.98px) {
-  .headroom--unpinned {
-    .navbar-appscode-wrapper {
-      &.navbar-product {
-        padding: 0 0;
-        transform: translateY(104px);
-
-        .navbar-appscode {
-          .navbar-right {
-            top: 47px;
-          }
-        }
-      }
-
-      // .documentation-menu {
-      //   .navbar-right {
-      //     top: 85px !important;
-      //   }
-      // }
-    }
-  }
-
   .navbar-appscode {
     &.container {
-      padding: 0.5rem 15px;
-    }
-
-    &.documentation-menu {
-      margin-left: 0;
-      padding: 0;
-      ul .nav-item {
-        .link.is-active:after {
-          display: none;
-        }
-      }
-      .navbar-right {
-        position: fixed;
-        // top: -60px !important;
-        width: 80%;
-        border-right: 1px solid $ac-white-light;
-      }
+      padding: 1rem 15px;
     }
 
     .navbar-left {
@@ -968,9 +931,10 @@ Responsive Classes
       }
 
       .button.ac-button {
+        margin-left: 0;
         &.is-primary {
           margin-left: 0;
-          width: 100%;
+          width: auto;
         }
       }
 
@@ -981,9 +945,12 @@ Responsive Classes
         li.nav-item {
           margin: 6px 0;
 
-          .link .whats-new {
-            top: -0.2rem;
-            right: 0.5rem;
+          .link {
+            text-align: center;
+            .whats-new {
+              top: -0.7rem;
+              right: 0.2rem;
+            }
           }
         }
       }
@@ -997,103 +964,6 @@ Responsive Classes
         opacity: 1;
         visibility: visible;
       }
-    }
-  }
-
-  .resources-list {
-    grid-template-columns: auto;
-
-    .list-items {
-      h6 {
-        margin-bottom: 0.5rem;
-      }
-    }
-  }
-
-  .mega-menu-wrapper {
-    width: 100% !important;
-    left: 0 !important;
-    top: 0 !important;
-    padding-top: 20px !important;
-    background-color: #fafafd;
-    max-height: 90vh;
-    overflow-y: auto;
-
-    .mega-menu-inner {
-      .product-menu {
-        grid-template-columns: auto;
-        width: 100%;
-
-        .single-product {
-          width: 100%;
-
-          .product-logo {
-            height: 50px;
-            width: 50px;
-
-            img {
-              height: 1.8rem;
-            }
-          }
-
-          .navigate-icon {
-            .material-icons {
-              font-size: 16px;
-            }
-          }
-        }
-
-        &.database-list {
-          grid-template-columns: auto;
-        }
-      }
-
-      .product-description {
-        border-left: none;
-        padding-left: 0;
-        margin-top: 35px;
-        margin-left: 0;
-        max-width: 100%;
-      }
-    }
-  }
-  .press-wrapper {
-    .button.inline-button {
-      margin-left: 0 !important;
-      background-color: transparent;
-    }
-  }
-  .navbar-appscode-wrapper.navbar-product {
-    .navbar-appscode .navbar-right {
-      top: 47px;
-    }
-  }
-
-  .product-version {
-    &.pl-20 {
-      padding-left: 10px;
-    }
-
-    .dropdown {
-      .dropdown-trigger {
-        .button {
-          width: 170px;
-        }
-      }
-    }
-
-    .dropdown-menu {
-      z-index: 9999;
-    }
-  }
-
-  .back-button {
-    display: flex !important;
-
-    span {
-      color: $ac-primary;
-      padding-right: 15px;
-      font-size: 18px;
     }
   }
 }
