--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -149,25 +149,22 @@
 .blog-content {
   h1,
   h2,
-  h3 {
-    font-weight: 700;
-    margin-bottom: 10px;
+  h3,
+  h4 {
+    font-weight: 600;
+    line-height: 130%;
   }
   h1 {
     font-size: 36px;
-    line-height: 50px;
   }
   h2 {
-    font-size: 28px;
-    line-height: 40px;
+    font-size: 24px;
   }
   h3 {
-    font-size: 26px;
-    line-height: 36px;
+    font-size: 20px;
   }
   h4 {
-    font-size: 22px;
-    line-height: 32px;
+    font-size: 18px;
   }
   p {
     font-size: 16px;
