Fix cta area css
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -83,7 +83,7 @@
             <!-- recent-blog  -->
             <div class="single-recent-blog">
               <!-- date and month  -->
-              <a href="#" class="date-month">
+              <a href="{{.RelPermalink}}" class="date-month">
                 <span class="date">{{.PublishDate.Day}}</span>
                 <span class="month">{{.PublishDate.Format "Jan" | upper}}</span>
               </a>
